2010-01-18  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: sawfish-themer is dead, so remove the corresponing entry from custom-menu

	* lisp/sawfish/wm/frames.jl: sawfish-themer is dead, so remove frame-style-editable-p
	                             and all remaining sawfish-themer fragments

	* KEYBINDINGS: underline headings
	               add keymap for specific application section
		       add keymap-trans section

	* man/sawfish.texi
	* man/news.texi: updated

2010-01-15  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/commands/jump-or-exec.jl: added a modified version of jump-or-exec,
	                                            which supports both matching against WM_NAME
						    and WM_CLASS

	* Makefile.in: remove sawfish.pc upon distclean, not gitlcean

2010-01-12  Teika Kazura <teika@lavabit.com>
	* lisp/sawfish/wm/state/maximize.jl
	* man/news.texi
	* man/sawfish.texi: New command 'maximize-discard'. Some doc and code improvements in maximize.jl.

2010-01-10  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: post-release version-bump to 1.6.2 "Mighty Disco King"

2010-01-06  Jeremy Hankins <nowan@nowan.org>
	* lisp/sawfish/wm/viewport.jl: Reset the viewport to 0,0 on exit
		  for *all* workspaces.  This prevents windows from ending
		  up in strange places on restart.  Also fixed a bug in
		  select-workspace-and-viewport where it would not select
		  the correct viewport.

2010-01-03  Christopher Bratusek <zanghar@freenet.de>
	* Makefile.in: + add gitclean target
	               + instead of removing generated packging-script files upon
		        `distclean', remove them on `gitclean'
		       + call fakeroot debian/rules clean
		       + remove NEWS and FAQ rules (dupped, as in man/Makefile.in)

	* debian/changelog.in: s/+0200/+0100/

	* debian/control.in: removed debian-specific bits

	* sawfish.spec.in: don't call autogen.sh

	* debian/rules: don't all autotools