@@ -35,6 +35,8 @@ browsers, which tend to change their WM_NAME relatively often.
 @end itemize
 @item Misc
 @itemize @minus
+@item Improved ebuild and specfile [Christopher Bratusek] [Kim B. Heino]
+
 @item Updated documentation [Christopher Bratusek]
 
 @item Removed @code{frame-style-editable-p} and all other remaining
