@@ -1,3 +1,9 @@
+2010-01-24  Christopher Bratusek <zanghar@freenet.de>
+	* sawfish.spec.in: improved [Kim B. Heino]
+
+2010-01-23  Christopher Bratusek <zanghar@freenet.de>
+	* sawfish.ebuild.in: improved
+
 2010-01-18  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/menus.jl: sawfish-themer is dead, so remove the corresponing entry from custom-menu
 
